--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,11 @@
   margin: 0;
 }
 
-html, body { height: 100%; }
+// html, body {
+//   // height: 100%;
+//   display: flex;
+//   flex-direction: column;
+//   flex-wrap: wrap;
+//   // flex-grow: ;
+// }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
