Some files updated.

--- a/src/app/icons/debug-icon/debug-icon.component.html
+++ b/src/app/icons/debug-icon/debug-icon.component.html
@@ -3,7 +3,6 @@
   [style.--width]="iconSize"
   [style.--fill]="fillColour"
   [style.--stroke]="strokeColour"
-  [ngClass]="selected ? 'selected' : 'not-selected'"
 >
   <svg
     xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
@@ -109,7 +108,7 @@
         id="path4634"
         sodipodi:rx="55.293606"
         sodipodi:ry="74.913918"
-        style="opacity:.9;fill-opacity:0;color:var(--stroke)"
+        style="opacity:.9;fill-opacity:0;color:var(--fill)"
         sodipodi:type="arc"
         d="m-1.7837 954.26a55.294 74.914 0 1 1 -110.59 0 55.294 74.914 0 1 1 110.59 0z"
         sodipodi:cy="954.26062"
@@ -126,25 +125,25 @@
         <path
             id="path4732"
             sodipodi:nodetypes="csccsscssssccsssc"
-            style="block-progression:tb;text-indent:0;color:var(--stroke);text-transform:none;fill:var(--fill)"
+            style="block-progression:tb;text-indent:0;color:var(--fill);text-transform:none;fill:var(--fill)"
             d="m422.75 102c-4.766 0.0242-9.9187 1.3551-14.375 4.2812-4.4563 2.9262-8.2953 8.0892-8.0938 14.5 0.62997 2.4528 0.29225 4.6274 0.15625 7.0938 0 7.3139 5.9361 13.25 13.25 13.25s13.25-5.9361 13.25-13.25c0-7.2397-5.8199-13.131-13.031-13.25 2.5013-1.6292 6.2071-2.6113 8.9062-2.625 10.547-0.0535 18.264 5.8161 23.875 14.719 5.6107 8.9027 8.4999 20.739 8.3125 30.375-0.46947 24.144-12.347 44.328-29.938 59.844-17.591 15.515-40.852 26.093-62.938 30.25l1.85 9.81c23.832-4.486 48.551-15.656 67.719-32.562 19.17-16.91 32.78-39.82 33.31-67.16 0.23-11.7-2.98-25.02-9.84-35.9-6.86-10.89-17.99-19.45-32.41-19.38z"
         />
         <path
             id="path4744"
             sodipodi:nodetypes="csccsscssssccsssc"
-            style="block-progression:tb;text-indent:0;color:var(--stroke);text-transform:none;fill:var(--fill)"
+            style="block-progression:tb;text-indent:0;color:var(--fill);text-transform:none;fill:var(--fill)"
             d="m276.37 102c4.766 0.0242 9.9187 1.3551 14.375 4.2812 4.4563 2.9262 8.2953 8.0892 8.0938 14.5-0.62997 2.4528-0.29225 4.6274-0.15625 7.0938 0 7.3139-5.9361 13.25-13.25 13.25s-13.25-5.9361-13.25-13.25c0-7.2397 5.8199-13.131 13.031-13.25-2.5013-1.6292-6.2071-2.6113-8.9062-2.625-10.547-0.0535-18.264 5.8161-23.875 14.719-5.6107 8.9027-8.4999 20.739-8.3125 30.375 0.46947 24.144 12.347 44.328 29.938 59.844 17.591 15.515 40.852 26.093 62.938 30.25l-1.85 9.81c-23.832-4.486-48.551-15.656-67.719-32.562s-32.781-39.817-33.312-67.156c-0.22753-11.702 2.9825-25.019 9.8438-35.906 6.8612-10.887 17.983-19.448 32.406-19.375z"
         />
       </g>
       <path
           id="path4436"
-          style="color:var(--stroke);fill:#2b0000"
+          style="color:var(--fill);fill:black"
           d="m333.16 246.12c-56.874 2.4756-111.88 30.343-148.5 73.355-18.903 20.655-36.666 43.737-44.847 70.989 0.12006 4.347 1.7216 8.4509 2.9375 12.656-12.176 0.87692-27.332-0.74696-35.688 9.875-15.271 16.89-18.868 40.298-26.43 61.046-34.266 118.45-16.581 253.6 56.399 354.2 39.475 54.146 98.44 97.038 165.87 107.91 11.267 1.1515 24.193 4.2742 34.531-1.7188 3.8034-3.2941 9.4203-2.388 12.656 1.0938 14.076 7.2721 30.055 0.17976 44.531-1.625 68.929-15.185 128.17-62.486 165.24-121.52 68.627-106.04 79.931-244.93 37.509-363.23-5.6984-14.115-11.284-29.208-22.468-39.966-7.443-5.2204-16.828-6.9978-25.844-7.5312 5.8988-11.93 1.9334-26.154-6.6446-35.636-30.92-50.66-76.93-94.41-134.79-111.71-24.2-6.81-49.43-8.42-74.47-8.18z"
       />
       <path
           id="path3365"
           sodipodi:nodetypes="cssscsscssssc"
-          style="color:var(--stroke);fill:var(--fill)"
+          style="color:var(--fill);fill:var(--fill)"
           d="m340.57 260.02c-0.38696 0.01-0.80786 0.0286-1.25 0.0625-19.864 1.5232-40.169 3.4773-59.125 10.125-54.255 19.027-95.651 63.218-124 112.16-4.321 7.4591-1.3659 18.053 7.375 18.812 60.793 0.16016 121.58 0.017 182.38 0.0625 0.0521-0.00004 0.10417 0.00004 0.15625 0 60.796-0.0455 121.61 0.0977 182.41-0.0625 8.7409-0.75926 11.665-11.353 7.3438-18.812-28.349-48.938-69.745-93.129-124-112.16-18.956-6.6477-39.261-8.6018-59.125-10.125-5.0859-0.39001-4.2718 1.3038-6.6202 1.1861-2.3484-0.11765-1.4741-1.3504-5.536-1.2486z"
       />
       <g
@@ -153,19 +152,19 @@
         <path
             id="path3362"
             sodipodi:nodetypes="ccccscssssccc"
-            style="color:var(--stroke);fill:var(--fill)"
+            style="color:var(--stroke);fill:var(--stroke)"
             d="m384.26 416.43c-17.777 0-32.192 14.585-32.192 32.572v463.02c0.008 6.5721 0.008 11.469 8.631 12.388 135.91-7.5217 247.48-152.75 247.48-330.26 0-58.575-11.798-113.57-32.495-161.27-0.0993 0.0456-0.16384 0.0599-0.1817 0-0.31652-1.0611-0.72403-2.104-1.1811-3.0948-0.0539-0.12126-0.0974-0.24655-0.15142-0.3677-0.0201-0.0417-0.0402-0.0811-0.0605-0.12257-3.7396-7.6372-11.508-12.869-20.502-12.869h-169.35v-0.00004z"
         />
         <path
             id="path4267"
             sodipodi:nodetypes="ccccscssssccc"
-            style="color:var(--stroke);fill:var(--fill)"
+            style="color:var(--stroke);fill:var(--stroke)"
             d="m301.8 416.43c17.777 0 32.192 14.585 32.192 32.572v463.02c-0.008 6.5721-0.008 11.469-8.631 12.388-135.91-7.52-247.48-152.74-247.48-330.26 0-58.575 11.798-113.57 32.495-161.27 0.0993 0.0456 0.16384 0.0599 0.18171 0 0.31651-1.0611 0.72403-2.104 1.1811-3.0948 0.0539-0.12126 0.0974-0.24655 0.15142-0.3677 0.0201-0.0417 0.0402-0.0811 0.0605-0.12257 3.7396-7.6372 11.508-12.869 20.502-12.869h169.35v-0.00004z"
         />
       </g>
       <path
           id="path4641"
-          style="fill-rule:evenodd;color:var(--stroke);fill-opacity:.75;fill:var(--fill)"
+          style="fill-rule:evenodd;color:var(--fill);fill-opacity:1;fill:var(--fill)"
           d="m153.66 429.88-20.54 25.53-32.65-2.44 17.94 27.41-12.41 30.31l31.625-8.5938 25 21.188 1.5938-32.719 27.844-17.25-30.625-11.625-7.7812-31.812zm102.41 31.062-17.406 87.281-81.75 35.156 77.625 43.5 8.1875 88.625 65.375-60.375 86.781 19.594-37.219-80.812 45.469-76.5-88.375 10.438-58.688-66.906zm266.81 40.281-20.531 25.531-32.656-2.4375 17.938 27.406-12.406 30.312 31.625-8.5938 25 21.188 1.5938-32.719 27.844-17.25-30.625-11.625-7.7812-31.812zm-394.44 156.47-24.781 50.219-23.312 3.375c8.1289 27.999 19.262 55.078 33.469 80.562l14.625-7.6875 49.531 26.062-9.4688-55.188 40.094-39.094-55.406-8.0312-24.75-50.219zm407.12 4.625-49.094 55.938-73.875-8.7188 38.031 63.938-31.125 67.594 72.562-16.406 34.125 31.531c9.0765-9.753 17.491-20.126 25.125-30.969l2.2188-24.156 19.688-11.031c6.6344-12.047 12.566-24.452 17.844-37.125l-40.96-17.62-14.53-72.97zm-244.56 151.02-20.53 25.54-32.66-2.44 17.94 27.44l-12.406 30.312 31.625-8.5938 25 21.156 1.5938-32.719 27.844-17.219-30.625-11.625-7.78-31.85z"
       />
       <path
@@ -192,7 +191,7 @@
           id="path4722"
           sodipodi:rx="192.33931"
           sodipodi:ry="171.52884"
-          style="fill-rule:evenodd;color:var(--fill);fill:url(#linearGradient4838)"
+          style="fill-rule:evenodd;color:var(--stroke);fill:url(#linearGradient4838)"
           sodipodi:type="arc"
           d="m542.33 420.48c0 94.733-86.113 171.53-192.34 171.53s-192.34-76.796-192.34-171.53c0-94.733 86.113-171.53 192.34-171.53s192.34 76.796 192.34 171.53z"
           transform="matrix(.73666 0 0 .66331 87.121 91.124)"
@@ -203,7 +202,7 @@
           id="path4756"
           sodipodi:rx="192.33931"
           sodipodi:ry="171.52884"
-          style="color:var(--fill);fill-rule:evenodd;fill:url(#linearGradient4838)"
+          style="color:var(--stroke);fill-rule:evenodd;fill:url(#linearGradient4838)"
           sodipodi:type="arc"
           d="m542.33 420.48c0 94.733-86.113 171.53-192.34 171.53s-192.34-76.796-192.34-171.53c0-94.733 86.113-171.53 192.34-171.53s192.34 76.796 192.34 171.53z"
           transform="matrix(.040518 0 0 .047371 265 152.29)"
@@ -214,7 +213,7 @@
           id="path4760"
           sodipodi:rx="192.33931"
           sodipodi:ry="171.52884"
-          style="color:var(--fill);fill-rule:evenodd;fill:url(#linearGradient4838)"
+          style="color:var(--stroke);fill-rule:evenodd;fill:url(#linearGradient4838)"
           sodipodi:type="arc"
           d="m542.33 420.48c0 94.733-86.113 171.53-192.34 171.53s-192.34-76.796-192.34-171.53c0-94.733 86.113-171.53 192.34-171.53s192.34 76.796 192.34 171.53z"
           transform="matrix(.040518 0 0 .047371 392.7 152.29)"
