--- a/src/app/icons/info-icon/info-icon.component.scss
+++ b/src/app/icons/info-icon/info-icon.component.scss
@@ -21,11 +21,11 @@ section {
 
 }
 
-.not-selected {
-  fill: var(--stroke);
-  color: var(--stroke);
-}
-.selected {
-  fill: red;
-  color: red;
-}
+// .not-selected {
+//   fill: var(--stroke);
+//   color: var(--stroke);
+// }
+// .selected {
+//   fill: red;
+//   color: red;
+// }
