--- a/src/app/pages/info/info.component.scss
+++ b/src/app/pages/info/info.component.scss
@@ -1,3 +1,11 @@
 section {
   padding: 0 1vw;
+
+  width: 100vw;
+  inline-size: 90vw;
+}
+
+p {
+  max-width: 100vw;
+  overflow-wrap: break-word;
 }
