Some files updated.

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -2,45 +2,47 @@
   <header>
     <p>Recording: {{ rs.state }}, Playback: {{ ps.state }}</p>
   </header>
-  <section
-    id="record"
-    [style.--background-color]="backgroundColor"
-    [style.--justify-content]="justifyContent"
-    [style.--align-items]="alignItems"
-    (click)="recordClick()"
-    (drag)="recordDrag()"
-    (dblclick)="recordDblClick()"
-    (touchmove)="recordTouchmove()"
-    (touchstart)="recordTouchstart()"
-    (mousedown)="recordMousedown()"
-  >
-    <app-mic
-      [iconSize]="iconSize"
-      [defaultColour]="defaultColour"
-      [selectedColour]="selectedColour"
-      title="Record"
-      [text]="'Record'"
-    ></app-mic>
-  </section>
-  <section
-    id="play"
-    [style.--background-color]="backgroundColor"
-    [style.--justify-content]="justifyContent"
-    [style.--align-items]="alignItems"
-    (click)="playClick()"
-    (drag)="playDrag()"
-    (dblclick)="playDblClick()"
-    (touchmove)="playTouchmove()"
-    (touchstart)="playTouchstart()"
-    (mousedown)="playMousedown()"
-  >
-    <app-play
-      [iconSize]="iconSize"
-      [defaultColour]="defaultColour"
-      [selectedColour]="selectedColour"
-      title="Playback"
-      [text]="'Playback'"
-    ></app-play>
-  </section>
+  <div id="record-play" [style.--direction]="direction">
+    <section
+      id="record"
+      [style.--background-color]="backgroundColor"
+      [style.--justify-content]="justifyContent"
+      [style.--align-items]="alignItems"
+      (click)="recordClick()"
+      (drag)="recordDrag()"
+      (dblclick)="recordDblClick()"
+      (touchmove)="recordTouchmove()"
+      (touchstart)="recordTouchstart()"
+      (mousedown)="recordMousedown()"
+    >
+      <app-mic
+        [iconSize]="iconSize"
+        [defaultColour]="defaultColour"
+        [selectedColour]="selectedColour"
+        title="Record"
+        [text]="'Record'"
+      ></app-mic>
+    </section>
+    <section
+      id="play"
+      [style.--background-color]="backgroundColor"
+      [style.--justify-content]="justifyContent"
+      [style.--align-items]="alignItems"
+      (click)="playClick()"
+      (drag)="playDrag()"
+      (dblclick)="playDblClick()"
+      (touchmove)="playTouchmove()"
+      (touchstart)="playTouchstart()"
+      (mousedown)="playMousedown()"
+    >
+      <app-play
+        [iconSize]="iconSize"
+        [defaultColour]="defaultColour"
+        [selectedColour]="selectedColour"
+        title="Playback"
+        [text]="'Playback'"
+      ></app-play>
+    </section>
+  </div>
   <audio controls class="audio-element"></audio>
 </main>
